# golden-haskell

./: .travis.yml  README.md  golden-haskell.cabal  stack.yaml
app/: Main.hs
src/: GoldenSection.hs
test/: Test.hs
