name:                golden-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/PHPirates/golden-haskell#readme
license:             ISC
license-file:        LICENSE
author:              Thomas Schouten
maintainer:          k3l1n6i2y5k7d1e3@deltadak.slack.com
copyright:           ISC
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GoldenSection
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite golden-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , golden-haskell
                     , tasty-hunit
                     , tasty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/PHPirates/golden-haskell
